<resources>
    <string name="app_name">Entertainment Headquarter</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_with_us">Register With Us</string>
    <string name="send_button_label">Send</string>
    <string name="ContentDescritpionLogo">this will be the EHQ Logo</string>
    <string name="Order_number">Order 1234</string>
    <string name="PaymentForRegistration">Payment For Registration</string>
    <string name="TransactionAmount">Rs 150</string>
    <string name="transaction">transaction…</string>
    <string name="paynow">Pay Now</string>
    <string name="see_more">\  Show More \ </string>
    <string name="soundnmusic">Sound &amp; Music</string>
    <string name="dancenchoreography">Dance &amp; Choreography</string>
    <string name="imageviewCont">content description</string>
    <string name="eye_colour">Eye Colour</string>
    <string name="band">Band</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="weightinkg">Weight(KG)</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="complexion">Complexion</string>
    <string name="currentmarital_status">Current  Marital  Status</string>
    <string name="sample_work">Sample work</string>
    <string name="dark_complexion">The dark or saanwla complexion</string>
    <string name="formal_education">Formal Education in acting (if Any)</string>
    <string name="fair_complexion">The fair complexion</string>
    <string name="costume">Costume</string>
    <string name="makeup">Makeup</string>
    <string name="set_designer">Set Designer</string>
    <string name="assistant_composer">Assistant Composer</string>
    <string name="product_manager">Production Manager</string>
    <string name="spotboy">Spot Boy"</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="nameOfGroup">Name of Group</string>
    <string name="numberOfMembersInTeam">Number of members in the in Team</string>
    <string name="choreographer">Choreographer</string>
    <string name="dancer">Dancer</string>
    <string name="film_director">Film Director</string>
    <string name="art_director">Art Director</string>
    <string name="music_director">Music Director</string>
    <string name="name_of_insitite">Name of the insitute from where you got your training</string>
    <string name="work_experience">Work Experience</string>
    <string name="folmalEducation">Formal Education    \n (if Any)</string>
    <string name="link_to_sample_work">Please provide the Drive/Youtube/website link(s) for your sample work (A monologue, if no past experience)</string>
    <string name="optional_link_1">optional link  1 </string>
    <string name="optional_link_2">optional link  2 </string>
    <string name="upload">Upload</string>
    <string name="payAndSubmit">Pay and Submit form</string>
    <string name="duration">Duration : </string>
    <string name="you_want_to_become_a">You Want To Become :</string>
    <string name="detailed_information">Detailed Information</string>
    <string name="talent_application_form">Talent Application Form</string>
    <string name="share">Share</string>
    <string name="terms_and_conditions">Terms And Condition</string>
    <string name="music_band">Band Music</string>
    <string name="music_original">Original Music</string>
    <string name="music_dj">DJ Music</string>
    <string name="music_ehqProduction">EHQ Production</string>
    <string name="music_covers">Cover Music</string>
    <string name="proceed_further">Proceed Further</string>
    <string name="dance">Dance</string>
    <string name="ehq_dance_originals">EHQ Dance Originals</string>
    <string name="dance_cover">Dance Covers</string>
    <string name="dance_chreography">Choreographer\'s Corner </string>
    <string name="casty_introduction_text">Entertainment Headquarter</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="live_tv"> LIVE</string>
    <string name="rowImageDesc">episode row image view</string>
    <string name="title">Title</string>
    <string name="camera_assistant">Camera Assistant</string>
    <string name="sound_assistant">Sound Assistant</string>
    <string name="jimmyjib">Jimmy Jib Operator</string>
    <string-array name="numbers">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>8+</item>

    </string-array>
    <string name="numbers_prompt">Choose number of members</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_home">Home</string>
    <string name="tab_originals">Originals</string>
    <string name="tab_social">Social</string>
    <string name="tab_Music">Music</string>
    <string name="tab_comedy">Comedy</string>
    <string name="tab_reality">Reality</string>
    <string name="tab_register">register</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_art">Art</string>
    <string name="tab_iconnect">iConnect</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_tabbed">tabbedActivity</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="title_activity_main_tabs">MainTabActivity</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_generic_tab">GenericTabActivity</string>
    <string name="usedForVErification">this will be used for verification</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_actor">Actor</string>
    <string name="micButton">Mic Button</string>
    <string name="email">Email</string>
    <string name="lyricist">Lyricist</string>
    <string name="scriptWriter">Script Writer</string>
    <string name="soundRecorder">Sound Recorder</string>
    <string name="assistantDirector">Assistant Director</string>
    <string name="cinematography">Cinematograpgy</string>
    <string name="singer">Singer</string>
    <string name="danceGroups">Dance Groups</string>
    <string name="editor">Editor</string>
    <string name="artdirectionAndSetDirection">Art Direction / Set Direction</string>
    <string name="lightSpecilist">Lights Specialist</string>
    <string name="anyOther">Any Other</string>
    <string name="musicalBands">Musical Bands</string>
    <string name="costumeDesigner">Costume Designer</string>
    <string name="makeupAndHairstyle">Makeup and Hairstyle</string>
    <string name="musicComposer">Music Composer/Music Director</string>
    <string name="logo">logo</string>
    <string name="betaVersion">Alpha Version</string>
    <string name="emailAddress">Email address </string>
    <string name="phoneNumber">phone Number</string>
    <string name="fakeEmail">bobMarleyatcom</string>
    <string name="searchButton">Search button</string>
    <string name="tab_Story">Story</string>
</resources>