<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tab_home" />
        <item
            android:id="@+id/nav_originals"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tab_originals" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tab_social" />
        <item
            android:id="@+id/nav_comedy"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tab_comedy" />
        <item
            android:id="@+id/nav_reality"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tab_reality" />

        <item
            android:id="@+id/nav_dance"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/dance" />

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tab_Music" />

        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tab_Story" />

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/talent_application_form" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_TermsAndCondition"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/terms_and_conditions" />

        <item
        android:id="@+id/nav_signOut"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/action_sign_out" />
    </group>

    <item android:title="" >

        <menu>


        </menu>
    </item>

</menu>
